playbooks/troubadour.ms3-inc.com/platform/keycloak/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: 'true'
    konghq.com/protocols: https
    konghq.com/https-redirect-status-code: '302'
spec:
  rules:
  - host: auth.test.troubadour.ms3-inc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: keycloak-discovery
          servicePort: 8080
